DOC: Swagger api/register
